partners FAQ and home page responsive

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -41,4 +41,9 @@ footer{
       color: $secondary-light-color;
     }
   }
+  @media(max-width: 500px){
+    .logo{
+      display: none;
+    }
+  }
 }
