--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -25,6 +25,7 @@ ul{
   padding: 0;
   list-style: none;
 }
+
 button:focus , button:active{
   box-shadow: none !important;
   outline: none !important;
@@ -235,4 +236,13 @@ a, a:hover {
 
 img {
   object-fit: cover;
+}
+@media(max-width :500px){
+  .mt-xs{
+    margin-top: 10px;
+  }
+  .centered-content {
+    margin: 0;
+    padding :15px !important;
+  }
 }
