footer,dashboard my listing ,dashboard my rental  responsive

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -245,4 +245,10 @@ img {
     margin: 0;
     padding :15px !important;
   }
+  .social-buttons .btn-social{
+    font-size: 12px;
+    span{
+      font-size: 14px;
+    }
+  }
 }
