--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -34,8 +34,8 @@
   }
 }
 
-@media(max-width : 500px){
+@media(max-width : 700px){
   .fixed{
-    display: none;
+    display: none !important;
   }
 }
