--- a/src/scss/rent-gear.scss
+++ b/src/scss/rent-gear.scss
@@ -383,3 +383,64 @@
     }
   }
 }
+@media(max-width : 700px ){
+  .main-wrapper{
+    padding :0 !important;
+  }
+  .rent-gear .rent-gear-body .sidebar
+  .sidebar-wrapper .list-group 
+  .list-group-item > .item-active::after{
+    display :none;
+  }
+  .search{
+    margin-top: 2rem;
+  }
+  .views {
+    margin-top: 1rem;
+    justify-content: flex-start!important;
+  }
+  .card img{
+    height: 100%!important;
+  }
+  .sidebar-wrapper .list-group{
+    flex-direction:row; 
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+  }
+  .sidebar-wrapper .list-group .list-group-item{
+    flex: 30%;
+    height: 100px;
+    border: 1px solid #eee !important;
+    div{
+      width :100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  .main-wrapper .gear_list_view{
+    flex-direction: column !important;
+    .card-body{
+      padding :1rem !important;
+      .card-right{
+        padding :0 !important;
+        .cart{
+          margin-right: 0 !important;
+        }
+        .fav{
+          width :auto !important;
+        }
+      }
+    }
+  }
+  .gear_table_view .card-body .card-right{
+    display :block !important;
+  }
+  .gear_table_view .card-img .card-img-top {
+    padding: 0 !important;
+  }
+}
+@media(max-width : 500px){
+}
