--- a/src/scss/theme-card-one.scss
+++ b/src/scss/theme-card-one.scss
@@ -5,6 +5,15 @@
   position: relative;
   .card-img{
     height: 100%;
+    -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+    
+    &:hover{
+      -moz-transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      transform: scale(1.1);
+    }
   }
   .overlay{
     background-color: rgba(0,0,0,0.3);
@@ -33,8 +42,11 @@
         width: 30px;
         height: 30px;
         margin-left: auto;
-        background-image: url('/images/Icons/Table/Arrow/Hover.svg');
+        background-image: url('/images/Icons/Table/Arrow/Default.svg');
         background-repeat: no-repeat;
+        &:hover{
+          background-image: url('/images/Icons/Table/Arrow/Hover.svg');
+        }
       }
     }
   }
