--- a/src/scss/theme-card-two.scss
+++ b/src/scss/theme-card-two.scss
@@ -17,10 +17,20 @@
   background-color: transparent;
   border-radius: 5px;
 }
-
-.btn:hover {
-  background-color: rgba(255, 255, 255, 0.4);
-  color :white;
+.animation{
+  position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+   background-color: transparent;
+  &:hover{
+background-color: $primary-color-alpha;
+.btn{
+  background-color:  white;
+  color: $primary-color;
+}
+  }
 }
 
 .theme-2{
@@ -36,9 +46,11 @@
       height: 100%;
      
       &:hover{
-        -moz-transform: scale(1.1);
-        -webkit-transform: scale(1.1);
-        transform: scale(1.1);
+        .wrraper{
+          .overlay{
+            background-color: $primary-color;
+          }
+        }
       }
     }
     .overlay{
