--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -1,10 +1,12 @@
 .theme-navbar {
   position: relative;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding-left: 15px;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
 
   .app-nav-logo {
     margin: -10px 0 0 15px;
