--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -177,10 +177,21 @@
 
       & > a {
         display: block;
-        padding: .55rem 1rem;
+        padding: 20px;
         color: $white;
         text-decoration: none;
+        font-size: 16px;
+        font-weight: bold;
+        line-height: 1em;
       }
+    }
+
+    .theme-nav__btn {
+      width: 125px;
+      height: 48px;
+      font-size: 16px;
+      font-weight: bold;
+      line-height: 1em;
     }
 
     .dropdown-toggle {
