--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -1,33 +1,33 @@
 h1 {
-  font-family: 'GothamPro';
+  font-family: 'Gotham Pro', sans-serif;
   color: $secondary-color;
   font-size: 49px;
   font-weight: bold;
 }
 
 h2 {
-  font-family: 'GothamPro';
+  font-family: 'Gotham Pro', sans-serif;
   color: $secondary-color;
   font-size: 43px;
   font-weight: bold;
 }
 
 h3 {
-  font-family: 'GothamPro';
+  font-family: 'Gotham Pro', sans-serif;
   color: $secondary-color;
   font-size: 32px;
   font-weight: bold;
 }
 
 h4 {
-  font-family: 'GothamPro-Bold';
+  font-family: 'Gotham Pro', sans-serif;
   color: $secondary-color;
   font-size: 20px;
   font-weight: bold;
 }
 
 h5 {
-  font-family: 'GothamPro-Bold';
+  font-family: 'Gotham Pro', sans-serif;
   color: $secondary-color;
   font-size: 18px;
   font-weight: bold;
@@ -35,7 +35,7 @@ h5 {
 }
 
 h6 {
-  font-family: 'GothamPro-Bold';
+  font-family: 'Gotham Pro', sans-serif;
   color: $secondary-color;
   font-size: 16px;
   letter-spacing: 9%;
