--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -134,11 +134,20 @@
     }
 
     .title {
+      margin: 0 0 25px;
       color: $white;
       font-size: 49px;
       font-weight: bold;
       line-height: 1em;
-      margin-bottom: 15px;
+    }
+
+    .sub-title {
+      margin: 0 0 35px;
+      font-size: 20px;
+      font-weight: 300;
+      line-height: 1em;
+      letter-spacing: -0.01em;
+      color: $white;
     }
 
     .theme-btn {
@@ -509,6 +518,12 @@
     .home-head .desc {
       width: 75%;
       margin: 0 auto;
+
+      span {
+        font-size: 20px;
+        font-weight: 300;
+        letter-spacing: -0.01em;
+      }
     }
 
     .rent-categories {
