--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -75,6 +75,14 @@ input::-webkit-input-placeholder {
   align-items: center;
 }
 
+.centered-content {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 10px;
+  box-sizing: border-box;
+  min-height: min-content;
+}
+
 .flex-row {
   display: flex;
   align-items: center;
