--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -179,8 +179,14 @@
         display: block;
         padding: 20px;
         color: $white;
-        text-decoration: none;
         font-size: 16px;
+        text-decoration: none;
+        font-weight: bold;
+        line-height: 1em;
+      }
+
+      .btn {
+        font-size: 16px !important;
         font-weight: bold;
         line-height: 1em;
       }
