--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -31,13 +31,13 @@
 
 .animation-element.slide-left.testimonial {
   float: left;
-  margin: 0% 1.5% 3% 1.5%;
+  margin: 0 10px 20px;
 
 }
 
-.animation-element.slide-left.testimonial:nth-of-type(odd) {
-  margin: 0% 1.5% 3.0% 0%;
-}
+//.animation-element.slide-left.testimonial:nth-of-type(odd) {
+//  margin: 0% 1.5% 3.0% 0%;
+//}
 
 .animation-element.slide-left.testimonial:nth-of-type(even) {
 
@@ -119,21 +119,6 @@
     height: calc(100vh - 127px);
     min-height: min-content;
     max-height: 837px;
-    // .cameras{
-    //   height:20px;
-    //   background-image: url('/images/Icons/Tags/Photo/Default.svg');
-    //   background-repeat: no-repeat;
-    // }
-    // .drones{
-    //   height:20px;
-    //   background-image: url('/images/Icons/Tags/drone/Default.svg');
-    //   background-repeat: no-repeat;
-    // }
-    // .lights{
-    //   height:20px;
-    //   background-image: url('/images/Icons/Tags/lights/Default.svg');
-    //   background-repeat: no-repeat;
-    // }
 
     .bold {
       font-weight: bold;
@@ -158,7 +143,6 @@
       font-size: 20px;
       font-weight: 300;
       line-height: 1em;
-      letter-spacing: -0.01em;
       color: $white;
     }
 
@@ -223,6 +207,7 @@
   }
 
   .home-body {
+    padding-top: 35px;
 
     .theme-row {
       justify-content: space-between;
@@ -242,14 +227,11 @@
       background-image: url('/images/New-arrivals_bg.png');
       background-repeat: round;
       background-size: contain;
-      background-repeat-x: no-repeat;
-      background-repeat-y: no-repeat;
       margin: 4rem 0 0;
       text-align: center;
 
       .section-overlay {
         padding: 2rem 0;
-        //background-color: rgba(255,255,255,0.95);
       }
     }
 
@@ -264,10 +246,6 @@
 .block-e1-size {
   width: 30% !important;
   height: 200px !important;
-}
-
-.block-e3-adjustment {
-  margin-left: -40px !important;
 }
 
 .block-e2-size {
@@ -360,6 +338,8 @@
     width: 100px;
     height: 100px;
     margin: 0;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   div.desc {
@@ -371,68 +351,46 @@
 
   #camera {
     background-image: url('/images/Icons/catogories/1 (1).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #computer_electronic {
     background-image: url('/images/Icons/catogories/1 (2).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #drones {
     background-image: url('/images/Icons/catogories/1 (3).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #lenses {
     background-image: url('/images/Icons/catogories/1 (4).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #lighting {
     background-image: url('/images/Icons/catogories/1 (5).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #audio {
     background-image: url('/images/Icons/catogories/1 (6).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #tripods_stabilization_rigs {
     background-image: url('/images/Icons/catogories/1 (7).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #camera_accessories {
     background-image: url('/images/Icons/catogories/1 (8).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #studio_spaces {
     background-image: url('/images/Icons/catogories/1 (9).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #office_spaces {
     background-image: url('/images/Icons/catogories/1 (10).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #others {
     background-image: url('/images/Icons/catogories/1 (11).jpg');
-    background-repeat: no-repeat;
-    background-position: center;
   }
 }
 
@@ -445,7 +403,6 @@
   background-color: $white;
   transform: skewX(-15deg);
   box-shadow: 2px 2px 17px 0px #eceaea;
-  border-radius: 2px;
 }
 
 .block-el:first-child .block-bg::before {
@@ -485,8 +442,10 @@
 }
 
 .paySection1 {
-  background-image: url('/images/fast_bg.png');
-  background-color: rgba(189, 189, 189, 0.05);
+  background-image: url('/images/home/faq-bg.jpg');
+  background-size: cover;
+  background-position: center;
+  // background-color: rgba(189, 189, 189, 0.05);
 }
 
 .paySection2 {
@@ -571,4 +530,248 @@
     }
   }
 
+}
+
+.home-new-arrival {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: stretch;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 721px;
+
+  .arrival-timer {
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 -150px 0 0;
+    max-width: 895px;
+    width: 100%;
+    height: 721px;
+    z-index: 1;
+    background-image: url('/images/home/new-arrival-bg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    .arrival-timer-title {
+      margin-bottom: 50px;
+      color: $secondary-color;
+    }
+
+    .arrival-timer-frame {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      justify-content: flex-start;
+
+      .arrival-timer-slot-row {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .arrival-timer-slot {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 3px 3px 0;
+        border: none;
+        padding: 0;
+        width: 150px;
+        height: 150px;
+        background: $white;
+
+        &:last-child {
+          margin-right: 0;
+        }
+
+        .slot-heading {
+          margin-bottom: 10px;
+        }
+
+        .slot-value {
+          font-size: 52px;
+          font-weight: bold;
+          line-height: 1em;
+          color: $secondary-color;
+        }
+      }
+
+      .arrival-timer-find-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 50px;
+        background: $primary-color;
+        font-size: 16px;
+        color: $white;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .arrival-items {
+    flex-grow: 1;
+    flex-shrink: 1;
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 721px;
+    overflow: hidden;
+    z-index: 2;
+
+    .arrival-items-inner-wrapper {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      justify-content: space-between;
+      align-content: flex-start;
+      padding: 20px;
+      width: auto;
+      height: 100%;
+    }
+
+    .arrival-item {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-content: stretch;
+      justify-content: flex-end;
+      margin: 0 20px 20px;
+      width: 410px;
+      height: 307px;
+      background-position: center;
+      background-size: cover;
+
+      .arrival-item-info-middle {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-end;
+        margin: 0;
+        border: none;
+        padding: 12px 20px;
+        width: 100%;
+        height: min-content;
+        z-index: 2;
+
+        .info-category {
+          margin: 0 5px 10px 0;
+          font-size: 12px;
+          font-weight: normal;
+          line-height: 1em;
+          color: rgba(255, 255, 255, .7);
+        }
+
+        .info-title {
+          margin: 0;
+          line-height: 25px;
+          font-size: 18px;
+          text-transform: uppercase;
+          color: $white;
+        }
+      }
+
+      .arrival-item-info-separator {
+        border: none;
+        margin: 0 22px;
+        width: calc(100% - 44px);
+        height: 1px;
+        z-index: 2;
+        background: rgba(255, 255, 255, 0.05);
+      }
+
+      .arrival-item-info-bottom {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0;
+        border: none;
+        padding: 12px 22px;
+        width: 100%;
+        height: 60px;
+        z-index: 2;
+
+        .info-price-wrapper {
+          display: flex;
+          align-items: flex-end;
+          justify-content: flex-start;
+
+          .info-price {
+            margin: 0 5px 0 0;
+            font-size: 27px;
+            font-weight: bolder;
+            line-height: 1em;
+            color: $white;
+          }
+
+          .info-unit {
+            margin: 0 5px 2px 0;
+            font-size: 12px;
+            font-weight: normal;
+            line-height: 1em;
+            color: rgba(255, 255, 255, .5);
+          }
+        }
+
+        .info-bottom-go-btn {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin: 0;
+          border: none;
+          border-radius: 50%;
+          padding: 0;
+          width: 30px;
+          height: 30px;
+          background: rgba(255, 255, 255, .1);
+          cursor: pointer;
+
+          svg {
+            &, & * {
+              fill: transparent;
+            }
+          }
+
+          &:hover {
+            background: $primary-color;
+          }
+        }
+      }
+
+      .arrival-item-info-bg {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 175px;
+
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), linear-gradient(359.53deg, #000000 0.7%, rgba(0, 0, 0, 0) 98.82%);
+        opacity: 0.8;
+        z-index: 1;
+      }
+    }
+
+    .arrival-items-glow {
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 285px;
+      height: 100%;
+
+      background: linear-gradient(270deg, #fff 0%, #fff 20%, rgba(255, 255, 255, 0) 100%);
+      z-index: 3;
+      pointer-events: none;
+    }
+  }
 }
