--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -650,6 +650,17 @@
       height: 307px;
       background-position: center;
       background-size: cover;
+      cursor: pointer;
+
+      &:hover {
+        .arrival-item-info-bg {
+          opacity: .8;
+        }
+
+        .arrival-item-info-bottom .info-bottom-go-btn {
+          background: $primary-color;
+        }
+      }
 
       .arrival-item-info-middle {
         display: flex;
@@ -735,6 +746,7 @@
           height: 30px;
           background: rgba(255, 255, 255, .1);
           cursor: pointer;
+          transition: .5s;
 
           svg {
             &, & * {
@@ -755,9 +767,10 @@
         bottom: 0;
         width: 100%;
         height: 175px;
+        opacity: 0;
+        transition: .5s;
 
         background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), linear-gradient(359.53deg, #000000 0.7%, rgba(0, 0, 0, 0) 98.82%);
-        opacity: 0.8;
         z-index: 1;
       }
     }
