--- a/src/scss/components/theme-card-two.scss
+++ b/src/scss/components/theme-card-two.scss
@@ -9,13 +9,20 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  color: transparent;
-  font-size: 16px;
+  border-radius: 0;
+  border: 1px solid $white;
   padding: 12px 24px;
-  background-color: transparent;
-  border-radius: 5px;
+  background: transparent;
+  opacity: 0;
+  transition: .5s;
+  font-size: 16px;
+  color: $white;
+  transform: translate(-50%, -50%);
+
+  &:hover {
+    background: $white;
+    color: $primary-color;
+  }
 }
 
 .animation {
@@ -25,13 +32,13 @@
   width: 100%;
   height: 100%;
   background-color: transparent;
+  transition: .5s;
 
   &:hover {
     background-color: $primary-color-alpha;
 
     .btn {
-      background-color: white;
-      color: $primary-color;
+      opacity: 1;
     }
   }
 }
@@ -43,6 +50,10 @@
   .wrraper {
     background-color: $primary-color-alpha;
     height: 100%;
+
+    .card-img {
+      border-radius: 0;
+    }
 
     img {
       -moz-transition: all 0.3s;
