--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -429,9 +429,7 @@
 }
 
 .paySection {
-  display: flex;
-  flex-direction: row;
-  height: 600px;
+  min-height: 600px;
 }
 
 .calendarSection {
@@ -442,10 +440,59 @@
 }
 
 .paySection1 {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: flex-start;
+  min-height: 600px;
+
   background-image: url('/images/home/faq-bg.jpg');
   background-size: cover;
   background-position: center;
-  // background-color: rgba(189, 189, 189, 0.05);
+
+  .pay-section1__title {
+    margin: 105px 0 50px 180px;
+  }
+
+  .pay-section1__desc {
+    font-size: 16px;
+    margin: 0 0 60px 180px;
+  }
+
+  .pay-section1__cta {
+    margin: 0 0 0 180px;
+  }
+
+  @media screen and (max-width: 1300px) {
+    .pay-section1__title {
+      margin: 80px 0 30px 100px;
+    }
+
+    .pay-section1__desc {
+      font-size: 16px;
+      margin: 0 0 30px 100px;
+    }
+
+    .pay-section1__cta {
+      margin: 0 0 0 100px;
+    }
+  }
+
+  @media screen and (max-width: 1000px) {
+    .pay-section1__title {
+      font-size: 30px;
+      margin: 80px 0 30px 50px;
+    }
+
+    .pay-section1__desc {
+      font-size: 16px;
+      margin: 0 0 30px 50px;
+    }
+
+    .pay-section1__cta {
+      margin: 0 0 0 50px;
+    }
+  }
 }
 
 .paySection2 {
