feat(Menu): animation update with horizontal

--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -115,7 +115,7 @@
       left: 0;
       top: 0;
       background-color: $primary-color;
-      transform: skewX(-8deg) translateX(-52px) skewY(-2deg) translateY(-68px);
+      transform: skewX(-8deg) translateX(-112px) skewY(-2deg) translateY(-118px) scale(1.1);
       border-radius: 2px;
     }
 
