--- a/src/scss/app/fixed-sidebar.scss
+++ b/src/scss/app/fixed-sidebar.scss
@@ -8,7 +8,11 @@
   align-items: flex-end;
   justify-content: center;
   overflow: visible;
-  z-index: 99;
+  z-index: $zindex-fixed;
+
+  @include media-breakpoint-down(md) {
+    top: 40%;
+  }
 
   @include media-breakpoint-down(sm) {
     display: none;
@@ -27,6 +31,11 @@
     height: 90px;
     overflow: visible;
     cursor: pointer;
+
+    @include media-breakpoint-down(md) {
+      width: 78px;
+      height: 58px;
+    }
 
     &:hover {
       .sidebar-item__icon {
@@ -94,6 +103,10 @@
       z-index: 2;
       transition: .5s !important;
       transition-delay: unset;
+
+      @include media-breakpoint-down(md) {
+        display: none;
+      }
     }
 
     .sidebar-item__bg {
@@ -135,11 +148,5 @@
       line-height: 1em;
       z-index: 5;
     }
-  }
-}
-
-@media(max-width: 700px) {
-  .fixed {
-    display: none !important;
   }
 }
