--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -48,7 +48,7 @@ footer {
     }
   }
 
-  @media(max-width: 500px) {
+  @media only screen and (max-width: 767px){
     .logo {
       display: none;
     }
@@ -56,5 +56,62 @@ footer {
       justify-content: center !important;
       margin-top: 10px;
     }
+    .copyright {
+      padding-top: 10px;
+      text-align: center
+    }
+    .footer-privaci-policy{
+      -webkit-flex-basis: inherit;
+      flex-basis: inherit;
+    }
+    .news-letter {
+      text-align: center;
+      padding-right: 0;
+      margin-bottom: 0 !important;
+    }
+    .news-letter-container {
+      background: #FAF8F9;
+    }
+    .align-items-center > div {
+      margin-top: 40px;
+      font-size: 20px;
+    }
+    .theme-text-small {
+      font-size: 16px;
+      width: 72%;
+      line-height: 144%;
+      margin: 30px auto 30px auto;
+    }
+    .social-buttons {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .hr-light {
+      margin-bottom: 1rem !important;
+    }
+    .theme-form-group {
+      padding-right: 0;
+
+    }
+    .subscribe-btn {
+      min-width: 64px;
+    }
+    .social-buttons .btn-social span {
+      font-size: 25px;
+    }
+    .social-buttons .btn-social {
+      font-size: 18px;
+      width: 95%;
+      font-weight: 900;
   }
+  }
+.news-letter {
+
+  @include media-breakpoint-down(md) {
+  display: initial;
+  }
+}
+
 }
