--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -217,7 +217,6 @@ header {
       display: flex;
       align-items: center;
       justify-content: stretch;
-      overflow: auto;
       width: 100%;
       height: 100%;
       z-index: 2;
@@ -252,10 +251,12 @@ header {
           }
 
           @include media-breakpoint-down(sm) {
-            flex-direction: row;
+            flex-direction: column;
             flex-wrap: wrap;
             justify-content: space-between;
             margin: 35px 0;
+            align-items: center;
+            text-align: center;
           }
 
           li {
@@ -273,7 +274,7 @@ header {
 
             @include media-breakpoint-down(sm) {
               height: 50px;
-              width: 45%;
+              width: 50%;
             }
 
             a {
@@ -282,7 +283,7 @@ header {
               justify-content: flex-start;
               width: 100%;
               height: 100%;
-              font-size: 43px;
+              font-size: 35px;
               font-weight: 700;
               text-decoration: none;
               color: $white;
@@ -294,6 +295,7 @@ header {
               @include media-breakpoint-down(sm) {
                 justify-content: flex-start;
                 font-size: 23px;
+                justify-content: space-evenly;
               }
 
               &:hover {
@@ -334,6 +336,9 @@ header {
               &.with-mb {
                 margin-bottom: 35px;
               }
+              &.link {
+                display: none;
+              }
             }
           }
         }
@@ -362,7 +367,7 @@ header {
             }
 
             @include media-breakpoint-down(sm) {
-              align-items: flex-start;
+              align-items: center;
               margin: 0 0 15px;
             }
 
@@ -401,12 +406,12 @@ header {
             }
 
             @include media-breakpoint-down(sm) {
-              justify-content: flex-start;
+              justify-content: center;
             }
 
             .fab {
-              font-size: 40px;
-              margin: 0 50px 5px 0;
+              font-size: 35px;
+              margin: -10px 50px 5px 0;
 
               &:last-child {
                 margin-right: 0;
