--- a/src/scss/pages/home-responsive.scss
+++ b/src/scss/pages/home-responsive.scss
@@ -137,7 +137,7 @@
       flex-direction: row;
       align-items: center;
       justify-content: stretch;
-      margin: 0 0 290px;
+      margin: 0 0 300px;
       width: 100%;
       max-width: 727px;
 
@@ -287,4 +287,291 @@
 
   }
 
+  .flickity-viewport {
+    outline: none
+  }
+
+  .flickity-enabled {
+    overflow: hidden;
+  }
+
+  .flickity-slider:focus,
+  .flickity-enabled:focus {
+    outline: none
+  }
+
+  .slider-1 {
+    .am {
+      width: 66%;
+      height: 180px;
+      background: #fff;
+      margin: 0 20px;
+      padding: 0 10px 0 30px;
+
+      .block-content {
+        display: block;
+
+        .desc {
+          display: flex;
+          justify-content: space-between;
+          flex-direction: row;
+        }
+
+        span {
+          width: calc(100% - 35px);
+        }
+      }
+
+      button {
+        width: 35px;
+        height: 35px;
+        min-width: auto;
+        padding: 0;
+        margin: 0;
+        min-height: auto;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: rgba(243, 238, 238, 0.439);
+        color: #111
+      }
+    }
+  }
+
+  .slider-2 {
+    .arrival-items {
+      height: auto;
+
+    }
+  }
+
+  .slider-3 {
+    .carousel {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      .flickity-viewport {
+        width: 100%;
+        order: 1
+      }
+    }
+
+    .slide {
+      width: 100%;
+      margin-right: auto;
+      margin-left: auto;
+      padding: 0 7%;
+
+    }
+
+    .flickity-button {
+      order: 3
+    }
+
+    .flickity-page-dots {
+      order: 2;
+      margin-right: auto;
+    }
+
+    .flickity-prev-next-button {
+      background: rgba(248, 36, 98, 0.05);
+
+      border: none;
+    }
+
+    .flickity-prev-next-button.next {
+      margin-right: 20px;
+      float: right;
+
+
+    }
+  }
+
+  .custom-button-find {
+    background: #f82462;
+    color: #fff;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 10px;
+    text-align: center;
+    font-weight: 600;
+    border: none;
+
+    i {
+      margin: 0 5px;
+    }
+  }
+}
+
+.flickity-page-dots {
+  bottom: 0px;
+  list-style: none;
+  display: flex;
+}
+
+/* white circles */
+.flickity-page-dots .dot {
+  width: 15px;
+  height: 15px;
+  opacity: 1;
+  background: transparent;
+  border: 2px solid #f74962;
+  border-radius: 50%;
+  margin: 0 5px
+}
+
+/* fill-in selected dot */
+.flickity-page-dots .dot.is-selected {
+  background: #f74962;
+}
+
+.flickity-prev-next-button {
+  width: 25px;
+  height: 25px;
+  background: rgba(248, 36, 98, 0.05);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  svg {
+    fill: #f74962;
+    width: 15px
+  }
+
+}
+.row{
+  margin-left: 0;
+  margin-right: 0;
+}
+@media (min-width: 567px) and (max-width: 991.98px) {
+
+  .footer-bottom,
+  .footer-nav {
+    display: none;
+  }
+
+  footer .Social-contects .email,
+  footer .Social-contects .phone {
+    display: none
+  }
+
+  .news-letter {
+    display: none;
+    .align-items-center {
+      flex-wrap: wrap;
+      justify-content: center;
+      .col-sm-6{
+        h3 , p{
+          white-space: nowrap;
+          text-align: center;
+        }
+      }
+      .col-sm-12 {
+        width: 100%;
+        max-width: 100%;
+        flex: 0 0 100%;
+        margin-bottom: 40px;
+
+        .theme-form-group {
+          max-width: 80%;
+          margin-right: auto;
+          margin-left: auto;
+        }
+
+        h5,
+        p {
+          text-align: center;
+        }
+      }
+    }
+  }
+
+  .flickity-page-dots {
+    position: absolute;
+    right: 40%;
+    bottom: 50px;
+  }
+
+  .home-page .slider-3 .slide .mb-3 {
+    display: flex;
+  }
+
+  .home-page .slider-3 .flickity-button {
+    position: absolute;
+    right: 100px;
+    bottom: 50px;
+    width: 40px;
+    height: 40px;
+
+    .svg {
+      width: 25px
+    }
+
+  }
+
+  .home-page .slider-3 .flickity-button.next {
+    right: 20px
+  }
+
+  .slider-2 .arrival-items {
+    width: 50%
+  }
+
+  .home-page .slider-1 .am {
+    width: 30%;
+  }
+
+  .paySection {
+    flex-direction: column
+  }
+
+  .paySection>div {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+    min-height: auto;
+    padding-bottom: 80px;
+
+    &:last-child>div {
+      display: flex;
+
+      .paySection2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 0 !important;
+        padding: 0 20px;
+
+      }
+    }
+  }
+  .Social-contects >div {
+    max-width: 569px;
+  }
+}
+@media(min-width: 318px){
+  .paySection1 {
+    min-height: 420px;
+  }
+  .paySection1 .pay-section1__title {
+    text-align: center;
+    font-size: 27px;
+    margin: 40px 0 30px;
+}
+.paySection1 .pay-section1__desc {
+  font-size: 16px;
+  margin: 15px 36px 30px;
+  max-width: 76%;
+  text-align: center;
+}
+.paySection1 .pay-section1__cta {
+  margin: auto;
+}
+.news-letter {
+  padding-bottom: 0 !important;
+}
 }
